Changes in styling of Home Page - Book Cards Issues with design resolved Image alignment and background styles were fixed

--- a/app/src/components/bookCard/bookCard.css
+++ b/app/src/components/bookCard/bookCard.css
@@ -1,28 +1,31 @@
 .card-box
-{ 
+{   
     @apply lg:w-[90%] md:w-[80%] w-[90%] 
             lg:h-[33rem]  md:h-[25rem] h-[20rem]
             
             rounded-[1rem] border-solid border-[3px]
          
             
-            bg-[#d4dfff]  border-[#0e0e0e] m-auto my-4 text-ellipsis  transition duration-[1s] ease-in-out;
+            bg-[#a2b6f1]  border-[#0e0e0e] m-auto my-4 text-ellipsis  transition duration-[1s] ease-in-out;
 }
 .card-box:hover 
 {
     @apply scale-105 overflow-visible border-[#fefafa] border-[3px] shadow-2xl;
 }
 .book-pic
-{
-    @apply w-auto h-[55%] rounded-[5%] m-1  bg-[#923939];
+{   
+   background: url('https://img.freepik.com/free-photo/wooden-table-with-blurred-background_1134-14.jpg?w=360');
+   background-size: cover;
+   
+    @apply w-auto h-[55%] rounded-[5%] m-1  bg-[#ae181860];
 }
 .book-pic img
 {
-    @apply w-full h-full rounded-[5%];
+    @apply h-[100%]  m-auto;
 }
 .book-info
 {
-    /* @apply  text-center */
+    @apply border-solid
 }
 .attr
 {
